k8s/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: image-system
spec:
  replicas: 2

  selector:
    matchLabels:
      app: worker

  template:
    metadata:
      labels:
        app: worker

    spec:
      containers:
      - name: worker
        image: distributed-task-processor-worker:latest
        imagePullPolicy: Never
