k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend
  namespace: image-system

spec:
  replicas: 1

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
        - name: backend
          image: distributed-task-processor-backend:v5
          imagePullPolicy: Never

          ports:
            - containerPort: 5000

          volumeMounts:
            - name: image-storage
              mountPath: /app/uploads
              subPath: uploads

            - name: image-storage
              mountPath: /app/processed
              subPath: processed

      volumes:
        - name: image-storage
          persistentVolumeClaim:
            claimName: image-storage-pvc

---
apiVersion: v1
kind: Service

metadata:
  name: backend
  namespace: image-system

spec:
  selector:
    app: backend

  ports:
    - port: 5000
      targetPort: 5000
