k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: image-system
spec:
  replicas: 1

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
      - name: frontend
        image: distributed-task-processor-frontend:latest
        imagePullPolicy: Never

        ports:
        - containerPort: 5173

---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: image-system
spec:
  selector:
    app: frontend

  ports:
  - port: 5173
    targetPort: 5173
